--- a/README
+++ b/README
@@ -3,12 +3,13 @@ INDEX
 =====
 
 - beck: small backup program using rsync
+- Watch: executes a command every time a file is changed in the current directory
 - autotrash: automatically deletes files older than a set amount of time from the trash directory
 
 ====
 BECK
 ====
-- Compile beck.go and save it somewhere on your path
+- Compile beck.go (go build beck.go) and save it somewhere on your path
 - Create .config/beck/source a symbolic link to the directory to backup
 - Create .config/beck/backup a symbolic link to the backup directory (hopefully on a different volume from source)
 - Write in .config/beck/exclude the list of things you want to exclude from the backup
@@ -20,3 +21,11 @@ AUTOTRASH
 =========
 
 - Just set autotrash to run periodically in crontab, the amount of time files are preserved can be changed by editing autotrash (it's 3 days)
+
+=====
+WATCH
+=====
+
+- Compile Watch.go (go build Watch.go)
+- call as "Watch <command to execute>" for example: "Watch make all" to run "make all" every time something changes in the current directory
+- run "Watch -help" for options
